# tg_app

./: .env  main.py  pyproject.toml  ТЗ тг.docx  тз.txt
api/: health_check.py  response.py  url_settings.py
api/cars/: handler.py  schema.py
api/cars/handlers/: car_handler.py
api/cars/schemas/: car_schema.py  schema.py
api/customers/: handler.py  schema.py
api/customers/handlers/: customer_handler.py
api/records/: handler.py  schema.py
api/staff/: handler.py  schema.py
api/workstations/: handler.py  schema.py
apps/services/: base_service.py
car_feature/car_actions/: car_crud.py
car_feature/car_actions_router/: car_route_actions.py
car_feature/car_api/: car_handler.py
car_feature/car_db_converter/: car_db_converter.py
core/db/: generics.py  helper.py
core/db/models/: __init__.py  (+7 more)
db/: car_db_dev.py  db_start.py
db/db_settings/: db_helper.py  db_settings.py
repository/: base_repository.py
repository/car_repository/: car_repository_orm.py  car_services_orm.py  repository.py
repository/customers_repository/: repository.py
repository/db/: generics.py
repository/records_repository/: repository.py
repository/staff_repository/: repository.py
repository/workstation_repository/: repository.py
services/: base_service.py
services/car_services/: converter.py  services.py  validator.py
services/customer_services/: converter.py  saervices.py  services.py
services/records_services/: converter.py  services.py  validator.py
services/staff_services/: converter.py  services.py
services/workstation_services/: converter.py  services.py
(+46 files in other folders)
